[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "AliveCLI"
version = "0.1.0"
description = "Core Alive daemon and CLI tool for publishing HLS streams to decentralized networks"
authors = ["techcoderx <engtianxi@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests_unixsocket = "^0.2.0"
requests = "^2.25.1"
tabulate = "^0.9.0"
opencv-python = "*"
base58 = "^2.0.1"
beem = "^0.24.20"
secp256k1prp = "^0.13.3"

[tool.poetry.scripts]
alivecli = "alivecli.alivecli:main"
alivedb_install = "alivecli.scripts.alivedb_install:main"
alivedb_usercreate = "alivecli.scripts.alivedb_usercreate:main"
alive_configure = "alivecli.scripts.stream_configure:main"
alive_end = "alivecli.scripts.stream_end:main"